--- a/src/mem/SConscript
+++ b/src/mem/SConscript
@@ -83,6 +83,7 @@ SimObject('MemChecker.py')
 Source('mem_checker.cc')
 Source('mem_checker_monitor.cc')
 
+DebugFlag('FugakuNext')
 DebugFlag('AddrRanges')
 DebugFlag('BaseXBar')
 DebugFlag('CoherentXBar')
